<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_explorer"
        android:icon="@drawable/ic_compass"
        android:title="@string/explorer" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_bell"

        android:title="@string/notification" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_fav"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navigation_my_order"
        android:icon="@drawable/ic_list_square"
        android:title="@string/my_order" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
</menu>